fix(style): Fix overflow on login buttons

--- a/src/pages/login/login.component.scss
+++ b/src/pages/login/login.component.scss
@@ -31,7 +31,7 @@
         gap: 1em;
         width: 30em;
         text-align: center;
-        overflow-y: hidden;
+        overflow: hidden;
     }
 
 
